# Livekit

./: .gitignore  CLIENT_ALERT_RPC_POC.md  Readme.md
agents-playground/: package-lock.json
agents-playground/src/components/playground/: Playground.tsx  SettingsDropdown.tsx
agents-playground/src/hooks/: useConfig.tsx
agents-playground/src/pages/api/: token.ts
livekit-voice-agent/: agent.py  pyproject.toml  rag_engine.py  system_prompt.txt  user_data.json
livekit-voice-agent/VariableHandler/: DynamicVariableHandler.py
livekit-voice-agent/agent/: EnglishAgent.py  HindiAgent.py  agent.py
livekit-voice-agent/data/: data1.txt
livekit-voice-agent/prompts/: InsurenceExpire.py  InsurenceExpireHindi.py  Languageswitch.py  system_prompt.txt
livekit-voice-agent/query-engine-storage/: default__vector_store.json  docstore.json  index_store.json
