[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
     "livekit-agents[deepgram,elevenlabs,google,openai,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.0.1",
    "livekit-blingfire==1.0.0",
    "pytz>=2024.1",
    "llama-index>=0.10.50",
    "llama-index-embeddings-gemini",
    "llama-index-embeddings-openai>=0.2.0"

]
